# newsletter-poc

./: .env  .env.example  .gitignore  README.md  main.py  newsletter.db  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: app.py  database.py  email_service.py  models.py  schemas.py
frontend/: config.js  index.html  modal.js  newsletter.css  newsletter.js
