[project]
name = "newsletter-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
